<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:paddingBottom="8pt"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8pt"
        android:paddingBottom="8pt">

        <TextView
            android:id="@+id/findDrinkTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/find_drink"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            >
        </SearchView>
    </LinearLayout>

    <Button
        android:id="@+id/topCocktails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_20_most_popular_cocktails"
        android:textSize="16sp" />

    <Button
        android:id="@+id/randomDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_10_random_drinks" />

</LinearLayout>