<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drinkDesc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/drinkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="8pt"
                android:paddingBottom="8pt"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/drinkPic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:paddingBottom="2pt"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/AlcProp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="1pt">

                <TextView
                    android:id="@+id/alcStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="1pt"
                    android:paddingTop="2pt"
                    android:paddingBottom="2pt"
                    android:text="@string/alcoholic_non_alcoholic"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/alcStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="1pt"
                    android:paddingTop="8pt"
                    android:paddingBottom="8pt"
                    android:text="TextView"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/categoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="1pt"
                    android:paddingBottom="2pt"
                    android:text="Drink Category:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/drinkCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="2pt"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="1pt"
                android:text="@string/ingredients"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/instrTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingStart="1pt"
                android:paddingBottom="2pt"
                android:text="@string/how_to_make"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="1pt"
                android:text="TextView"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>